cmake_minimum_required (VERSION 3.0)

set(INTERCEPT_EXTENSION_NAME "uksf_ai")

file(GLOB_RECURSE INTERCEPT_SOURCES *.h *.hpp *.c *.cpp)
intercept_set_linker_options()

set(INTERCEPT_NAME "ai")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}ai")

file(GLOB INTERCEPT_SOURCES *.h *.hpp *.c *.cpp)

SOURCE_GROUP("main" FILES ${INTERCEPT_SOURCES})

add_library( ${INTERCEPT_EXTENSION_NAME} SHARED ${INTERCEPT_SOURCES})
add_library( ${INTERCEPT_EXTENSION_NAME}_static ${INTERCEPT_SOURCES})
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

if(USE_64BIT_BUILD)
	target_link_libraries(${INTERCEPT_EXTENSION_NAME} "C:/SteamLibrary/_Working/addons/Dev/intercept/build/win64/intercept_client/Debug/intercept_client.lib")
else()
	target_link_libraries(${INTERCEPT_EXTENSION_NAME} "C:/SteamLibrary/_Working/addons/Dev/intercept/build/win32/intercept_client/Debug/intercept_client.lib")
endif()
set_target_properties(${INTERCEPT_EXTENSION_NAME} PROPERTIES PREFIX "")
set_target_properties(${INTERCEPT_EXTENSION_NAME} PROPERTIES FOLDER ai)

set_target_properties(${INTERCEPT_EXTENSION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/output")
set_target_properties(${INTERCEPT_EXTENSION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG "${PROJECT_SOURCE_DIR}/output")
set_target_properties(${INTERCEPT_EXTENSION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE "${PROJECT_SOURCE_DIR}/output")
set_target_properties(${INTERCEPT_EXTENSION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${PROJECT_SOURCE_DIR}/output")
set_target_properties(${INTERCEPT_EXTENSION_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${PROJECT_SOURCE_DIR}/output")

if(USE_64BIT_BUILD)
    set(FINAL_DLL_NAME ${INTERCEPT_EXTENSION_NAME}_x64.dll)
else()
    set(FINAL_DLL_NAME ${INTERCEPT_EXTENSION_NAME}.dll)
endif()

add_custom_command(TARGET ${INTERCEPT_EXTENSION_NAME} POST_BUILD
    # Copy DLL to root
    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:${INTERCEPT_EXTENSION_NAME}> ${PROJECT_SOURCE_DIR}/../intercept/${FINAL_DLL_NAME}
    # Copy PDB to symbols
    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE_DIR:${INTERCEPT_EXTENSION_NAME}>/${INTERCEPT_EXTENSION_NAME}.pdb ${PROJECT_SOURCE_DIR}/../intercept/${ACRE_ARCH}/${INTERCEPT_EXTENSION_NAME}.pdb
)
